--- a/inddex.html
+++ b/inddex.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        
+        *{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body{
+            background-color: #425ad0;
+            background-image:
+            repeating-linear-gradient(
+                to right, transparent 0 100px,
+                #25283b22 100px 101px
+            ),
+            repeating-linear-gradient(
+                to bottom, transparent 0 100px,
+                #25283b22 100px 101px
+            );
+        }
+        
+        /* body::before{
+            position: absolute;
+            width: min(950px, 90vw);
+            top: 10%;
+            left: 50%;
+            height: 90%;
+            transform: translateX(-50%);
+            content: '';
+            background-image: url(t.jpg);
+            background-size: 100%;
+            background-repeat: no-repeat;
+            background-position: top center;
+            pointer-events: none;
+        } */
+    </style>
+      <link rel="stylesheet" href="Sample.css">
+</head>
+<body>
 
+    <div class="banner">
+        <div class="slider" style="--quantity: 10">
+            <div class="item" style="--position: 1;"><img src="8.jpg" alt=""></div>
+            <div class="item" style="--position: 2"><img src="1.jpeg" alt=""></div>
+            <div class="item" style="--position: 3"><img src="10.jpg" alt=""></div>
+            <div class="item" style="--position: 4"><img src="2.jpeg" alt=""></div>
+            <div class="item" style="--position: 5"><img src="7.jpg" alt=""></div>
+            <div class="item" style="--position: 6"><img src="3.jpeg" alt=""></div>
+            <div class="item" style="--position: 7"><img src="5.jpg" alt=""></div>
+            <div class="item" style="--position: 8"><img src="4.jpeg" alt=""></div>
+            <div class="item" style="--position: 9"><img src="9.jpg" alt=""></div>
+            <div class="item" style="--position: 10"><img src="12.jpeg" alt=""></div>
+            <div class="item"><img src="11.jpeg" alt=""></div>
+        </div>
+        <div class="content">
+            <h1 data-content="BLADER'S CLASH">BLADER'S CLASH</h1>
+            <!-- <div class="author">
+                <h2>TECH-SPARTAS</h2>
+                <p><b>WE'RE HEADING TOWARDS A JOURNEY OF MAKING ENVITABLE GAME.</b></p>
+                <p></p>
+
+            </div> -->
+            <!-- <div class="model"></div> -->
+        </div>
+    </div>
+    <script type="text/javascript" src="style.js"></script>
+</body>
+</html>
